--- a/src/posts/published/parametric-design/index.mdx
+++ b/src/posts/published/parametric-design/index.mdx
@@ -19,21 +19,21 @@ Parametric design is the process of using adjustable parameters to modify and in
 
 It can be very simple, like choosing a color:
 
-<Spacer bottom={2}>
+<Margin bottom={2}>
   <ColorPicker />
-</Spacer>
+</Margin>
 
 Or perhaps the width and height of an item:
 
-<Spacer bottom={2}>
+<Margin bottom={2}>
   <ResizableBox />
-</Spacer>
+</Margin>
 
 To something more complex, like generative art:
 
-<Spacer bottom={2}>
+<Margin bottom={2}>
   <FullSpiro />
-</Spacer>
+</Margin>
 
 Parametric design is the foundation of so many dev and design tools that it's incredibly likely you've encountered it without even knowing it. Wiring up inputs to provide immediate feedback can be a very satisfying way to experiment and solve problems.
 
