--- a/src/posts/published/the-folded-code-test/index.mdx
+++ b/src/posts/published/the-folded-code-test/index.mdx
@@ -14,13 +14,13 @@ import codeFoldedStatic from './images/code-folded-static.jpg'
 
 One underrated feature of code editors is "code folding", the ability to fold a block of code, like this:
 
-<Spacer bottom={1}>
+<Margin bottom={1}>
   <Gif
     alt="Animation of VSCode collapsing blocks of code from multiple lines, into a single line"
     gifSrc={codeFoldingGif}
     staticSrc={codeFoldedStatic}
   />
-</Spacer>
+</Margin>
 
 I use this feature all the time, and recently, it dawned on me that folding your code might help you write better code.
 
