--- a/src/snippets/margin.mdx
+++ b/src/snippets/margin.mdx
@@ -5,7 +5,7 @@ description: 'A component for easily applying margins with component composition
 category: 'React Component'
 ---
 
-**Update**: This component was formerly names `Spacer`. It was brought to my attention that a few design systems use `Spacer` in the way of old `spacer.gif`s, arbitrarily sized empty boxes used for pushing elements around. Thus, I've renamed this component to `Margin`. It's more accurate anyways.
+**Update**: This component was formerly named `Spacer`. It was brought to my attention that a few design systems use `Spacer` in the way of old `spacer.gif`s, arbitrarily sized empty boxes used for pushing elements around. Thus, I've renamed this component to `Margin`. It's more accurate anyways.
 
 ---
 
